@@ -40,6 +40,7 @@ Index of used prefices
 3 md5 - MD5 module
 4 rng - Pseudo Random module
 4 sh1 - SHA1 module
+4 tmr - Timer module
 ----- - ------------------------------------------------
       - Compound
 ----- - ------------------------------------------------
@@ -89,7 +90,6 @@ Index of used prefices
 5 htm - HTML module
 5 rgx - Regex module
 5 sh2 - SHA2 module
-4 tmr - Timer module
 5 xml - XML module
       - css module
       - url module
